add_executable(helloworld helloworld.cpp)
add_executable(beispiel beispiel_programm.cpp)
add_executable(aufgabe2bis4 aufgabe2bis4.cpp)
add_executable(aufgabe5 aufgabe5.cpp)

#target_link_libraries(helloworld my_fancy_library)

add_executable(aufgabe7
  aufgabe7.cpp)


# Kommentieren Sie die folgenden Zeilen für die Aufgabe `mileToKilometer` aus
#add_executable(mileToKilometer mileToKilometer.cpp)
