add_executable(helloworld helloworld.cpp)
add_executable(beispiel beispiel_programm.cpp)
add_executable(aufgabe2bis4 aufgabe2bis4.cpp)
add_executable(aufgabe5 aufgabe5.cpp)
add_executable(aufgabe9 aufgabe9.cpp)
add_executable(aufgabe10 aufgabe10.cpp)

#target_link_libraries(helloworld my_fancy_library)

add_executable(aufgabe7
  aufgabe7.cpp circle.cpp)

add_executable(aufgabe12
  aufgabe12.cpp circle.cpp)

add_executable(aufgabe8
  aufgabe8.cpp circle.cpp)


# Kommentieren Sie die folgenden Zeilen für die Aufgabe `mileToKilometer` aus
#add_executable(mileToKilometer mileToKilometer.cpp)
